analytics/overlays/analytics-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: analytics-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
