analytics/overlays/analytics_configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  template:
    spec:
      containers:
        - name: mariadb
          volumeMounts:
            - name: dump-db
              mountPath: /docker-entrypoint-initdb.d/mcm-matomo-dump.sql
      securityContext:
        fsGroup: 1000
      volumes:
        - name: dump-db
          configMap:
            name: analytics-dump-db
