analytics/overlays/analytics_deployment_set_fsgroup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1000
